force-app/main/default/objects/ID_Search__c/ID_Search__c.object-meta.xml
<CustomObject>
    <description
  >One record per distinct South African ID number searched on the public ID Search site. Stores the decoded ID data and a running search counter. Contains personal information (national ID number, date of birth) - keep sharing Private and never expose to guest sharing rules.</description>
    <label>ID Search</label>
    <nameField>
        <displayFormat>IDS-{00000}</displayFormat>
        <label>ID Search Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Searches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>