force-app/main/default/objects/ID_Search__c/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <description
  >Decoded from digit 11 of the ID number (0 citizen, 1 permanent resident, 2 refugee).</description>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Refugee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>