force-app/main/default/objects/ID_Search__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description
  >Decoded from digits 1-6 (YYMMDD) of the ID number.</description>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>