force-app/main/default/objects/ID_Search__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description
  >Decoded from digits 7-10 of the ID number (0000-4999 female, 5000-9999 male).</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>