force-app/main/default/objects/ID_Search__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >13-digit South African ID number. Unique external ID so repeat searches upsert onto the same record.</description>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>