force-app/main/default/objects/ID_Search__c/fields/Last_Searched__c.field-meta.xml
<CustomField>
    <fullName>Last_Searched__c</fullName>
    <description
  >Timestamp of the most recent search of this ID number (observability only).</description>
    <label>Last Searched</label>
    <type>DateTime</type>
</CustomField>