force-app/main/default/objects/ID_Search__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Incremented by IdSearchController on every successful (valid) search of this ID number.</description>
    <label>Search Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>